[project]
name = "pv-insar-landslide-forecast"
version = "0.1.0"
description = "Seven-day landslide forecasting from PCA-derived InSAR and Random Forest (ESEV, under review)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arnav Garg" }]
keywords = [
  "landslide",
  "insar",
  "sentinel-1",
  "random-forest",
  "pca",
  "forecasting",
  "remote-sensing",
]
dependencies = [
  "h5py>=3.10",
  "numpy>=1.24",
  "pandas>=2.0",
  "xarray>=2023.1",
  "scikit-learn>=1.3",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "netCDF4>=1.6",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = ["ruff>=0.1"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["landslide_forecast*"]
